# Rusaren

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .taplo.toml  CODEQUALITY.md  GLOSSARY.md  README.md  REPOQUESTIONS.md  TODO.md  _typos.toml
server/: Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  deny.toml  rust-toolchain.toml
server/.cargo/: README.md  config.toml  mutants.toml
server/.config/: README.md  nextest.toml
server/content/: README.md
server/content/config/: README.md  configurations.yaml
server/content/maps/: README.md  registry.yaml  template_arena.txt  training_arena.txt
server/content/mechanics/: README.md  registry.yaml
server/content/skills/: README.md  bard.yaml  cleric.yaml  druid.yaml  mage.yaml  necromancer.yaml  paladin.yaml  ranger.yaml  rogue.yaml  warrior.yaml
server/crates/: README.md
server/crates/game_api/: Cargo.toml  README.md
server/crates/game_api/src/: README.md  app.rs  combat_feedback.rs  combat_log.rs  diagnostics.rs  lib.rs  observability.rs  realtime.rs  records.rs  transport.rs  webrtc.rs
server/crates/game_api/src/app/: README.md  lifecycle.rs  support.rs  tests.rs
server/crates/game_api/src/observability/: README.md  tests.rs
server/crates/game_api/src/realtime/: README.md  server.rs  sessions.rs  tests.rs
server/crates/game_api/src/records/: README.md  tests.rs
server/crates/game_api/src/webrtc/: README.md  config.rs  signaling.rs  tests.rs
server/crates/game_api/tests/: README.md  combat_log_views.rs  observability_fuzz_corpus.rs  performance_budget_gates.rs  realtime_webrtc.rs  realtime_websocket.rs  records_fuzz_corpus.rs  soak_match_flow.rs  webrtc_signaling_fuzz_corpus.rs
server/crates/game_api/tests/realtime_webrtc/: README.md  client.rs  session.rs  support.rs
server/crates/game_api/tests/realtime_websocket/: README.md  gameplay.rs  handshake.rs  http_routes.rs  validation.rs
server/crates/game_content/: Cargo.toml  README.md
server/crates/game_content/src/: README.md  config.rs  error.rs  lib.rs  map_generation.rs  maps.rs  mechanics.rs  model.rs  tests.rs  yaml.rs
server/crates/game_content/src/skills/: README.md  behavior.rs  mod.rs
server/crates/game_content/tests/: README.md  fuzz_corpus_replay.rs  map_generation.rs
server/crates/game_domain/: Cargo.toml  README.md
server/crates/game_domain/src/: README.md  error.rs  ids.rs  lib.rs  player.rs  round.rs  skill.rs  tests.rs
server/crates/game_domain/tests/: README.md  fuzz_corpus_replay.rs
server/crates/game_lobby/: Cargo.toml  README.md
server/crates/game_lobby/src/: README.md  lib.rs  tests.rs
server/crates/game_match/: Cargo.toml  README.md
server/crates/game_match/src/: README.md  accessors.rs  flow.rs  lib.rs  tests.rs  types.rs
server/crates/game_match/tests/: objective_control.rs
server/crates/game_net/: Cargo.toml  README.md
server/crates/game_net/benches/: README.md  snapshot_codec.rs
server/crates/game_net/src/: README.md  control.rs  error.rs  header.rs  ingress.rs  input.rs  lib.rs  packet_types.rs
server/crates/game_net/src/control/: README.md  client.rs  codec.rs  server.rs  (+6 more)
server/crates/game_net/tests/: README.md  control_packets.rs  fuzz_corpus_replay.rs  packet_core.rs
server/crates/game_sim/: Cargo.toml  README.md
server/crates/game_sim/benches/: README.md  combat_tick.rs
server/crates/game_sim/src/: README.md  actions.rs  effects.rs  geometry.rs  helpers.rs  lib.rs  tests.rs  ticks.rs
server/fuzz/: Cargo.toml  README.md
server/fuzz/corpus/: README.md
server/fuzz/corpus/arena_delta_snapshot_roundtrip/: README.md
server/fuzz/corpus/arena_full_snapshot_roundtrip/: README.md
server/fuzz/corpus/ascii_map_parse/: duplicate_anchor.txt  invalid_glyph.txt  missing_team_b.txt  prototype_arena.txt  ragged.txt
server/fuzz/corpus/control_command_roundtrip/: README.md
server/fuzz/corpus/input_frame_roundtrip/: README.md
server/fuzz/corpus/player_record_store_parse/: bad_counter.tsv  bad_field_count.tsv  bad_name.tsv  bad_player_id.tsv  duplicate_name.tsv  legacy_duplicate_id.tsv  legacy_valid_rows.tsv  single_valid_row.tsv  unsorted_valid_rows.tsv
server/fuzz/corpus/server_control_event_roundtrip/: README.md
server/fuzz/corpus/session_ingress_sequence/: README.md
server/fuzz/corpus/skill_yaml_parse/: cleric.yaml  duplicate_tier.yaml  invalid_behavior.yaml  invalid_dash_shape.yaml  invalid_silence_status.yaml  mage.yaml  missing_damage.yaml  rogue.yaml  unknown_tree.yaml  warrior.yaml
server/fuzz/corpus/webrtc_signal_message_parse/: bye.json  empty_candidate.json  empty_sdp.json  invalid_answer.json  invalid_json.json  invalid_unknown_field.json  missing_type.json  oversized_mid.json  unknown_type.json  valid_candidate.json  valid_offer.json
server/fuzz/corpus/webrtc_signal_message_roundtrip/: README.md
server/fuzz/fuzz_targets/: README.md  arena_delta_snapshot_roundtrip.rs  arena_full_snapshot_decode.rs  arena_full_snapshot_roundtrip.rs  ascii_map_parse.rs  control_command_decode.rs  control_command_roundtrip.rs  http_route_classification.rs  input_frame_decode.rs  input_frame_roundtrip.rs  observability_metrics_render.rs  packet_header_decode.rs  player_record_store_parse.rs  server_control_event_roundtrip.rs  session_ingress.rs  session_ingress_sequence.rs  skill_progression.rs  skill_yaml_parse.rs  webrtc_signal_message_parse.rs  webrtc_signal_message_roundtrip.rs
server/fuzz/support/: README.md
server/fuzz/support/game_net/: README.md  common.rs  events.rs  ingress.rs  mod.rs
server/scripts/: README.md  build-docs.ps1  check-core-coverage.ps1  docker-smoke.ps1  export-web-client.ps1  export-web-client.py  export-web-client.sh  frontend-quality.ps1  generate-reports.ps1  install-tools.ps1  plan-mutants.ps1  play-local.ps1  pre-commit-ci-guard.ps1  quality.ps1  run-mutants-shard.ps1  summarize-mutants.ps1  verus.ps1
server/static/: README.md
server/verus/: README.md  http_route_model.rs  input_stream_model.rs  network_ingress_model.rs  packet_header_model.rs  player_record_store_model.rs  session_bootstrap_model.rs  webrtc_signaling_model.rs
(+138 files in other folders)
