[workspace]
members = [
  "bin/fuzz_seed_builder",
  "bin/backend_callgraph",
  "bin/scip_json_dump",
  "bin/dedicated_server",
  "crates/game_api",
  "crates/game_content",
  "crates/game_domain",
  "crates/game_lobby",
  "crates/game_match",
  "crates/game_net",
  "crates/game_sim",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
criterion = "0.5.1"
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"
tower-http = { version = "0.6", features = ["fs"] }
