[workspace]
members = [
  "bin/fuzz_seed_builder",
  "bin/backend_callgraph",
  "bin/live_transport_probe",
  "bin/scip_json_dump",
  "bin/dedicated_server",
  "crates/game_api",
  "crates/game_content",
  "crates/game_domain",
  "crates/game_lobby",
  "crates/game_match",
  "crates/game_net",
  "crates/game_sim",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
criterion = "0.5.1"
futures-util = "0.3"
getrandom = "0.3"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
webrtc = "0.17.1"
