[package]
name = "rarena-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
game_api = { path = "../crates/game_api" }
game_content = { path = "../crates/game_content" }
game_domain = { path = "../crates/game_domain" }
game_net = { path = "../crates/game_net" }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[workspace]
members = ["."]

[[bin]]
name = "packet_header_decode"
path = "fuzz_targets/packet_header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "control_command_decode"
path = "fuzz_targets/control_command_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "input_frame_decode"
path = "fuzz_targets/input_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "session_ingress"
path = "fuzz_targets/session_ingress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "server_control_event_decode"
path = "fuzz_targets/server_control_event_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_route_classification"
path = "fuzz_targets/http_route_classification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "observability_metrics_render"
path = "fuzz_targets/observability_metrics_render.rs"
test = false
doc = false
bench = false

[[bin]]
name = "player_record_store_parse"
path = "fuzz_targets/player_record_store_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "skill_progression"
path = "fuzz_targets/skill_progression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ascii_map_parse"
path = "fuzz_targets/ascii_map_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "skill_yaml_parse"
path = "fuzz_targets/skill_yaml_parse.rs"
test = false
doc = false
bench = false
