[package]
name = "game_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
game_domain = { path = "../game_domain" }
game_lobby = { path = "../game_lobby" }
game_match = { path = "../game_match" }
game_net = { path = "../game_net" }
game_sim = { path = "../game_sim" }
