[package]
name = "game_api"
version = "0.8.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
getrandom.workspace = true
game_content = { path = "../game_content" }
game_domain = { path = "../game_domain" }
game_lobby = { path = "../game_lobby" }
game_match = { path = "../game_match" }
game_net = { path = "../game_net" }
game_sim = { path = "../game_sim" }
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
webrtc.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
