[package]
name = "game_sim"
version = "0.8.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
game_content = { path = "../game_content" }
game_domain = { path = "../game_domain" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "combat_tick"
harness = false
